# free_ais

./: Makefile  README.md  dma_example.py  kystdatahuset_example.py  pyproject.toml
examples/: aisstreamio_example.py  convert_to_parquet.py  dma_info.txt
